--- a/index.html
+++ b/index.html
@@ -44,9 +44,9 @@
         </header>
         <!-- About-->
         <section class="about-section text-center" id="about">
-            <div class="container">
+            <div id="about-container" class="container">
                 <div class="row">
-                    <div class="col-lg-8 mx-auto">
+                    <div id="about-name" class="col-lg-8 mx-auto">
                         <h2 class="text-white mb-4">Kilian MINETTO</h2>
                         <p class="text-white-50">
                             Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aspernatur dignissimos error
@@ -63,23 +63,30 @@
             <div class="container">
                 <!-- Featured Project Row-->
                 <div class="row align-items-center no-gutters mb-4 mb-lg-5">
-                    <div class="col-xl-8 col-lg-7"><img class="img-fluid mb-3 mb-lg-0" src="assets/img/bg-masthead.jpg" alt="" /></div>
+                    <div class="col-xl-8 col-lg-7"><a href="https://kilianm.promo-45.codeur.online/Design&Develop/" target="_blank"><img class="img-fluid mb-3 mb-lg-0" src="assets/img/Design.PNG" alt="" /></a></div>
                     <div class="col-xl-4 col-lg-5">
                         <div class="featured-text text-center text-lg-left">
-                            <h4>Shoreline</h4>
-                            <p class="text-black-50 mb-0">Grayscale is open source and MIT licensed. This means you can use it for any project - even commercial projects! Download it, customize it, and publish your website!</p>
+                            <h4>Design&Develop</h4>
+                            <p class="text-black-50 mb-0">
+                                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aspernatur blanditiis dolore
+                                dolorum hic laboriosam maxime odit officia quisquam repellendus ut.
+                                Architecto dignissimos eveniet magnam, minima nobis quod?
+                            </p>
                         </div>
                     </div>
                 </div>
                 <!-- Project One Row-->
                 <div class="row justify-content-center no-gutters mb-5 mb-lg-0">
-                    <div class="col-lg-6"><img class="img-fluid" src="assets/img/demo-image-01.jpg" alt="" /></div>
+                    <div class="col-lg-6"><a href=""><img class="img-fluid" src="assets/img/Mark.PNG" alt="" /></a></div>
                     <div class="col-lg-6">
                         <div class="bg-black text-center h-100 project">
                             <div class="d-flex h-100">
                                 <div class="project-text w-100 my-auto text-center text-lg-left">
-                                    <h4 class="text-white">Misty</h4>
-                                    <p class="mb-0 text-white-50">An example of where you can put an image of a project, or anything else, along with a description.</p>
+                                    <h4 class="text-white">Mark</h4>
+                                    <p class="mb-0 text-white-50">
+                                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cumque cupiditate et
+                                        ipsum, neque nostrum odit placeat sit ullam voluptatibus.
+                                    </p>
                                     <hr class="d-none d-lg-block mb-0 ml-0" />
                                 </div>
                             </div>
@@ -88,13 +95,16 @@
                 </div>
                 <!-- Project Two Row-->
                 <div class="row justify-content-center no-gutters">
-                    <div class="col-lg-6"><img class="img-fluid" src="assets/img/demo-image-02.jpg" alt="" /></div>
+                    <div class="col-lg-6"><a href="https://kilianm.promo-45.codeur.online/Mathematic/"><img class="img-fluid" src="assets/img/Multiplication.PNG" alt="" /></a></div>
                     <div class="col-lg-6 order-lg-first">
                         <div class="bg-black text-center h-100 project">
                             <div class="d-flex h-100">
                                 <div class="project-text w-100 my-auto text-center text-lg-right">
-                                    <h4 class="text-white">Mountains</h4>
-                                    <p class="mb-0 text-white-50">Another example of a project with its respective description. These sections work well responsively as well, try this theme on a small screen!</p>
+                                    <h4 class="text-white">Tables de Multiplication</h4>
+                                    <p class="mb-0 text-white-50">
+                                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet consectetur
+                                        distinctio in ipsa iste iure iusto necessitatibus quaerat quo quos. Deleniti dicta, possimus!
+                                    </p>
                                     <hr class="d-none d-lg-block mb-0 mr-0" />
                                 </div>
                             </div>
