--- a/index.html
+++ b/index.html
@@ -113,16 +113,18 @@
                 </div>
             </div>
         </section>
-        <!-- Signup-->
+        <!-- Contact -->
         <section class="signup-section" id="signup">
             <div class="container">
                 <div class="row">
                     <div class="col-md-10 col-lg-8 mx-auto text-center">
                         <i class="far fa-paper-plane fa-2x mb-2 text-white"></i>
-                        <h2 class="text-white mb-5">Subscribe to receive updates!</h2>
-                        <form class="form-inline d-flex">
-                            <input class="form-control flex-fill mr-0 mr-sm-2 mb-3 mb-sm-0" id="inputEmail" type="email" placeholder="Enter email address..." />
-                            <button class="btn btn-primary mx-auto" type="submit">Subscribe</button>
+                        <h2 class="text-white mb-5">Me contacter !</h2>
+                        <form class="form-inline">
+                            <input class="form-control flex-fill mr-0 mr-sm-2 mb-3" id="inputEmail" type="email" placeholder="Entrez votre adresse mail..." />
+                            <input class="form-control flex-fill mr-0 mr-sm-2 mb-3" id="subjectMail" type="text" placeholder="Entrez le sujet de votre mail..." />
+                            <textarea class="form-control flex-fill mr-0 mr-sm-2 mb-3" id="textarea" type="email" placeholder="Entrez votre message ici..."></textarea>
+                            <button class="btn btn-primary mx-auto" type="submit">Envoyer</button>
                         </form>
                     </div>
                 </div>
@@ -132,46 +134,46 @@
         <section class="contact-section bg-black">
             <div class="container">
                 <div class="row">
-                    <div class="col-md-4 mb-3 mb-md-0">
-                        <div class="card py-4 h-100">
-                            <div class="card-body text-center">
-                                <i class="fas fa-map-marked-alt text-primary mb-2"></i>
-                                <h4 class="text-uppercase m-0">Address</h4>
-                                <hr class="my-4" />
-                                <div class="small text-black-50">4923 Market Street, Orlando FL</div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-md-4 mb-3 mb-md-0">
+<!--                    <div class="col-md-4 mb-3 mb-md-0">-->
+<!--                        <div class="card py-4 h-100">-->
+<!--                            <div class="card-body text-center">-->
+<!--                                <i class="fas fa-map-marked-alt text-primary mb-2"></i>-->
+<!--                                <h4 class="text-uppercase m-0">Address</h4>-->
+<!--                                <hr class="my-4" />-->
+<!--                                <div class="small text-black-50">4923 Market Street, Orlando FL</div>-->
+<!--                            </div>-->
+<!--                        </div>-->
+<!--                    </div>-->
+                    <div class="offset-md-2 col-md-4 mb-3 mb-md-0">
                         <div class="card py-4 h-100">
                             <div class="card-body text-center">
                                 <i class="fas fa-envelope text-primary mb-2"></i>
                                 <h4 class="text-uppercase m-0">Email</h4>
                                 <hr class="my-4" />
-                                <div class="small text-black-50"><a href="#!">hello@yourdomain.com</a></div>
+                                <div class="small text-black-50"><a href="#!">killian.minetto@gmail.com</a></div>
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-4 mb-3 mb-md-0">
+                    <div class=" col-md-4 mb-3 mb-md-0">
                         <div class="card py-4 h-100">
                             <div class="card-body text-center">
                                 <i class="fas fa-mobile-alt text-primary mb-2"></i>
-                                <h4 class="text-uppercase m-0">Phone</h4>
+                                <h4 class="text-uppercase m-0">Téléphone</h4>
                                 <hr class="my-4" />
-                                <div class="small text-black-50">+1 (555) 902-8832</div>
+                                <div class="small text-black-50">06.59.33.41.27</div>
                             </div>
                         </div>
                     </div>
                 </div>
                 <div class="social d-flex justify-content-center">
-                    <a class="mx-2" href="#!"><i class="fab fa-twitter"></i></a>
+                    <a class="mx-2" href="#!"><i class="fab fa-linkedin"></i></a>
                     <a class="mx-2" href="#!"><i class="fab fa-facebook-f"></i></a>
                     <a class="mx-2" href="#!"><i class="fab fa-github"></i></a>
                 </div>
             </div>
         </section>
         <!-- Footer-->
-        <footer class="footer bg-black small text-center text-white-50"><div class="container">Copyright © Your Website 2020</div></footer>
+        <footer class="footer bg-black small text-center text-white-50"><div class="container">Copyright © Kilian MINETTO | Portfolio 2020</div></footer>
         <!-- Bootstrap core JS-->
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"></script>
