--- a/index.html
+++ b/index.html
@@ -56,6 +56,10 @@
                         </p>
                     </div>
                 </div>
+                <div class="social d-flex justify-content-center p-3">
+                    <a class="mx-2" href="https://linkedin.com/in/kilian-minetto-1a586b166" target="_blank"><i class="fab fa-linkedin"></i></a>
+                    <a class="mx-2" href="https://github.com/KMinetto" target="_blank"><i class="fab fa-github"></i></a>
+                </div>
             </div>
         </section>
         <!-- Projects-->
@@ -134,16 +138,6 @@
         <section class="contact-section bg-black">
             <div class="container">
                 <div class="row">
-<!--                    <div class="col-md-4 mb-3 mb-md-0">-->
-<!--                        <div class="card py-4 h-100">-->
-<!--                            <div class="card-body text-center">-->
-<!--                                <i class="fas fa-map-marked-alt text-primary mb-2"></i>-->
-<!--                                <h4 class="text-uppercase m-0">Address</h4>-->
-<!--                                <hr class="my-4" />-->
-<!--                                <div class="small text-black-50">4923 Market Street, Orlando FL</div>-->
-<!--                            </div>-->
-<!--                        </div>-->
-<!--                    </div>-->
                     <div class="offset-md-2 col-md-4 mb-3 mb-md-0">
                         <div class="card py-4 h-100">
                             <div class="card-body text-center">
@@ -166,9 +160,8 @@
                     </div>
                 </div>
                 <div class="social d-flex justify-content-center">
-                    <a class="mx-2" href="#!"><i class="fab fa-linkedin"></i></a>
-                    <a class="mx-2" href="#!"><i class="fab fa-facebook-f"></i></a>
-                    <a class="mx-2" href="#!"><i class="fab fa-github"></i></a>
+                    <a class="mx-2" href="https://linkedin.com/in/kilian-minetto-1a586b166" target="_blank"><i class="fab fa-linkedin"></i></a>
+                    <a class="mx-2" href="https://github.com/KMinetto" target="_blank"><i class="fab fa-github"></i></a>
                 </div>
             </div>
         </section>
