Add text in project

--- a/index.html
+++ b/index.html
@@ -49,10 +49,12 @@
                     <div id="about-name" class="col-lg-8 mx-auto">
                         <h2 class="text-white mb-4">Kilian MINETTO</h2>
                         <p class="text-white-50">
-                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aspernatur dignissimos error
-                            explicabo magnam maxime, pariatur perspiciatis velit? Aspernatur consequuntur doloribus ea
-                            earum eum, eveniet, impedit laboriosam molestiae, molestias nostrum possimus reiciendis
-                            reprehenderit repudiandae suscipit vero!
+                            Jeune développeur web de 21 ans, je suis depuis le 16 septembre 2020 en formation professionnelle
+                            en tant que développeur web avec l'Access Code School à Belfort. L'organisme de formation étant
+                            Onlineformapro.
+                            Grâce à cette formation j'ai développé une passion pour le développement. C'est des métiers qui se
+                            développent chaque jour avec beaucoup de nouveautés qui arrivent sur le marché.
+                            J'ai pour objectif de devenir un développeur FullStack.
                         </p>
                     </div>
                 </div>
@@ -65,32 +67,38 @@
         <!-- Projects-->
         <section class="projects-section bg-light" id="projects">
             <div class="container">
+                <h2 class="text-center">Projets</h2>
                 <!-- Featured Project Row-->
                 <div class="row align-items-center no-gutters mb-4 mb-lg-5">
                     <div class="col-xl-8 col-lg-7"><a href="https://kilianm.promo-45.codeur.online/Design&Develop/" target="_blank"><img class="img-fluid mb-3 mb-lg-0" src="assets/img/Design.PNG" alt="" /></a></div>
                     <div class="col-xl-4 col-lg-5">
                         <div class="featured-text text-center text-lg-left">
                             <h4>Design&Develop</h4>
-                            <p class="text-black-50 mb-0">
-                                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aspernatur blanditiis dolore
-                                dolorum hic laboriosam maxime odit officia quisquam repellendus ut.
-                                Architecto dignissimos eveniet magnam, minima nobis quod?
+                            <p class="text-black-50 mb-2">
+                                Projet d'intégration réalisé avec Bootstrap, c'est un site d'un organisme de développement
+                                informatique qui montre les projets rélisés, propose des services etc...
                             </p>
+                            <p class="mb-2">Liens du projet :</p>
+                            <a href="https://kilianm.promo-45.codeur.online/Design&Develop" target="_blank"><i class="fas fa-globe"></i></a>
+                            <a href="https://github.com/KMinetto/Design-Develop" target="_blank"><i class="fab fa-github"></i></a>
+
                         </div>
                     </div>
                 </div>
                 <!-- Project One Row-->
                 <div class="row justify-content-center no-gutters mb-5 mb-lg-0">
-                    <div class="col-lg-6"><a href=""><img class="img-fluid" src="assets/img/Mark.PNG" alt="" /></a></div>
+                    <div class="col-lg-6"><a href="https://kilianm.promo-45.codeur.online/Mark/"><img height="289px" class="img-fluid" src="assets/img/Mark.PNG" alt="" /></a></div>
                     <div class="col-lg-6">
                         <div class="bg-black text-center h-100 project">
                             <div class="d-flex h-100">
                                 <div class="project-text w-100 my-auto text-center text-lg-left">
                                     <h4 class="text-white">Mark</h4>
-                                    <p class="mb-0 text-white-50">
-                                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cumque cupiditate et
-                                        ipsum, neque nostrum odit placeat sit ullam voluptatibus.
+                                    <p class="mb-2 text-white-50">
+                                        Premier projet d'intégration. C'est un projet où j'ai pu découvrir Bootstrap
                                     </p>
+                                    <p class="mb-2 text-white-50">Liens du projet :</p>
+                                    <a class="mx-2" href="https://kilianm.promo-45.codeur.online/Mark/" target="_blank"><i class="fas fa-globe"></i></a>
+                                    <a class="mx-2" href="https://github.com/KMinetto/Mark" target="_blank"><i class="fab fa-github"></i></a>
                                     <hr class="d-none d-lg-block mb-0 ml-0" />
                                 </div>
                             </div>
@@ -99,16 +107,23 @@
                 </div>
                 <!-- Project Two Row-->
                 <div class="row justify-content-center no-gutters">
-                    <div class="col-lg-6"><a href="https://kilianm.promo-45.codeur.online/Mathematic/"><img class="img-fluid" src="assets/img/Multiplication.PNG" alt="" /></a></div>
+                    <div class="col-lg-6">
+                        <a href="https://kilianm.promo-45.codeur.online/Mathematic/">
+                            <img height="320px" class="img-fluid" src="assets/img/Multiplication.PNG" alt=""/>
+                        </a>
+                    </div>
                     <div class="col-lg-6 order-lg-first">
                         <div class="bg-black text-center h-100 project">
                             <div class="d-flex h-100">
-                                <div class="project-text w-100 my-auto text-center text-lg-right">
+                                <div class="project-text w-100 py-auto text-center text-lg-right">
                                     <h4 class="text-white">Tables de Multiplication</h4>
-                                    <p class="mb-0 text-white-50">
-                                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet consectetur
-                                        distinctio in ipsa iste iure iusto necessitatibus quaerat quo quos. Deleniti dicta, possimus!
+                                    <p class="mb-2 text-white-50">
+                                        Projet réalisé en PHP, ce site est un site de révision des tables de multiplication.
+                                        Il permet aussi de tester ses connaissances, avec des calculs générés aléatoirement.
                                     </p>
+                                    <p class="mb-2 text-white-50">Liens du projet :</p>
+                                    <a class="mx-2" href="https://kilianm.promo-45.codeur.online/Mathematic" target="_blank"><i class="fas fa-globe"></i></a>
+                                    <a class="mx-2" href="https://github.com/KMinetto/Mathematic" target="_blank"><i class="fab fa-github"></i></a>
                                     <hr class="d-none d-lg-block mb-0 mr-0" />
                                 </div>
                             </div>
