--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarResponsive">
                     <ul class="navbar-nav ml-auto">
-                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#about">A propos</a></li>
+                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#about">À propos</a></li>
                         <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#projects">Projets</a></li>
                         <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#signup">Contact</a></li>
                     </ul>
@@ -139,11 +139,11 @@
                     <div class="col-md-10 col-lg-8 mx-auto text-center">
                         <i class="far fa-paper-plane fa-2x mb-2 text-white"></i>
                         <h2 class="text-white mb-5">Me contacter !</h2>
-                        <form class="form-inline">
-                            <input class="form-control flex-fill mr-0 mr-sm-2 mb-3" id="inputEmail" type="email" placeholder="Entrez votre adresse mail..." />
-                            <input class="form-control flex-fill mr-0 mr-sm-2 mb-3" id="subjectMail" type="text" placeholder="Entrez le sujet de votre mail..." />
-                            <textarea class="form-control flex-fill mr-0 mr-sm-2 mb-3" id="textarea" type="email" placeholder="Entrez votre message ici..."></textarea>
-                            <button class="btn btn-primary mx-auto" type="submit">Envoyer</button>
+                        <form id="formContact" class="form-inline">
+                            <input class="form-control flex-fill mr-0 mr-sm-2 mb-3" name="email" id="inputEmail" type="email" placeholder="Email..." />
+                            <input class="form-control flex-fill mr-0 mr-sm-2 mb-3" name="subjectMail" id="subjectMail" type="text" placeholder="Sujet..." />
+                            <textarea class="form-control flex-fill mr-0 mr-sm-2 mb-3" name="textMail" id="textarea" rows="15" type="text" placeholder="Votre message ici..."></textarea>
+                            <button id="btnEmail" class="btn btn-primary mx-auto" type="submit">Envoyer</button>
                         </form>
                     </div>
                 </div>
