--- a/index.html
+++ b/index.html
@@ -45,20 +45,21 @@
         <!-- About-->
         <section class="about-section text-center" id="about">
             <div id="about-container" class="container">
+                <h2 class="text-center text-white-50 mb-5">Présentation</h2>
                 <div class="row">
-                    <div id="about-name" class="col-lg-8 mx-auto">
+                    <div id="about-name" class="col-lg-8 offset-lg-2">
                         <h2 class="text-white mb-4">Kilian MINETTO</h2>
-                        <p class="text-white-50">
-                            Jeune développeur web de 21 ans, je suis depuis le 16 septembre 2020 en formation professionnelle
+                        <p class="text-white-50 text-center">
+                            Jeune développeur web de 22 ans, je suis depuis le 16 septembre 2020 en formation professionnelle
                             en tant que développeur web avec l'Access Code School à Belfort. L'organisme de formation étant
                             Onlineformapro.
-                            Grâce à cette formation j'ai développé une passion pour le développement. C'est des métiers qui se
-                            développent chaque jour avec beaucoup de nouveautés qui arrivent sur le marché.
-                            J'ai pour objectif de devenir un développeur FullStack.
+                            Passionné par l'univers de l'informatique, je m'intéresse beaucoup aux nouvelles technologies
+                            notamment les langages web.
+                            J'ai pour objectif de devenir développeur fullstack.
                         </p>
                     </div>
                 </div>
-                <div class="social d-flex justify-content-center p-3">
+                <div class="social d-flex justify-content-center p-5">
                     <a class="mx-2" href="https://linkedin.com/in/kilian-minetto-1a586b166" target="_blank"><i class="fab fa-linkedin"></i></a>
                     <a class="mx-2" href="https://github.com/KMinetto" target="_blank"><i class="fab fa-github"></i></a>
                 </div>
