--- a/index.html
+++ b/index.html
@@ -71,7 +71,11 @@
                 <h2 class="text-center">Projets</h2>
                 <!-- Featured Project Row-->
                 <div class="row align-items-center no-gutters mb-4 mb-lg-5">
-                    <div class="col-xl-8 col-lg-7"><a href="https://kilianm.promo-45.codeur.online/Design&Develop/" target="_blank"><img class="img-fluid mb-3 mb-lg-0" src="assets/img/Design.PNG" alt="" /></a></div>
+                    <div class="col-xl-8 col-lg-7">
+                        <a href="https://kilianm.promo-45.codeur.online/Design&Develop/" target="_blank">
+                            <img class="img-fluid mb-3 mb-lg-0" src="assets/img/Design.PNG" alt="" />
+                        </a>
+                    </div>
                     <div class="col-xl-4 col-lg-5">
                         <div class="featured-text text-center text-lg-left">
                             <h4>Design&Develop</h4>
@@ -88,7 +92,11 @@
                 </div>
                 <!-- Project One Row-->
                 <div class="row justify-content-center no-gutters mb-5 mb-lg-0">
-                    <div class="col-lg-6"><a href="https://kilianm.promo-45.codeur.online/Mark/"><img height="289px" class="img-fluid" src="assets/img/Mark.PNG" alt="" /></a></div>
+                    <div class="col-lg-6">
+                        <a href="https://kilianm.promo-45.codeur.online/Mark/" target="_blank">
+                            <img height="289px" class="img-fluid" src="assets/img/Mark.PNG" alt="" />
+                        </a>
+                    </div>
                     <div class="col-lg-6">
                         <div class="bg-black text-center h-100 project">
                             <div class="d-flex h-100">
@@ -109,7 +117,7 @@
                 <!-- Project Two Row-->
                 <div class="row justify-content-center no-gutters">
                     <div class="col-lg-6">
-                        <a href="https://kilianm.promo-45.codeur.online/Mathematic/">
+                        <a href="https://kilianm.promo-45.codeur.online/Mathematic/" target="_blank">
                             <img height="320px" class="img-fluid" src="assets/img/Multiplication.PNG" alt=""/>
                         </a>
                     </div>
