--- a/index.html
+++ b/index.html
@@ -65,6 +65,32 @@
                 </div>
             </div>
         </section>
+        <!-- Slider -->
+        <section>
+            <div class="container">
+                <div class="row">
+                    <div class="col-12 col-sm-12 col-md-12">
+                        <div class="ind-slider">
+                            <div class="slide-track">
+                                <div class="slide"><i class="fab fa-html5"></i></div>
+                                <div class="slide"><i class="fab fa-css3"></i></div>
+                                <div class="slide"><i class="fab fa-php"></i></div>
+                                <div class="slide"><i class="fas fa-database"></i></div>
+                                <div class="slide"><i class="fab fa-node-js"></i></div>
+                                <div class="slide"><i class="fab fa-sass"></i></div>
+                                <div class="slide"><i class="fab fa-html5"></i></div>
+                                <div class="slide"><i class="fab fa-css3"></i></div>
+                                <div class="slide"><i class="fab fa-php"></i></div>
+                                <div class="slide"><i class="fas fa-database"></i></div>
+                                <div class="slide"><i class="fab fa-node-js"></i></div>
+                                <div class="slide"><i class="fab fa-sass"></i></div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
         <!-- Projects-->
         <section class="projects-section bg-light" id="projects">
             <div class="container">
