--- a/index.html
+++ b/index.html
@@ -175,9 +175,9 @@
                         <i class="far fa-paper-plane fa-2x mb-2 text-white"></i>
                         <h2 class="text-white mb-5">Me contacter !</h2>
                         <form id="formContact" class="form-inline">
-                            <input class="form-control flex-fill mr-0 mr-sm-2 mb-3" name="email" id="inputEmail" type="email" placeholder="Email..." />
+                            <input class="form-control flex-fill mr-0 mr-sm-2 mb-3" name="email" id="inputEmail" type="email" placeholder="Votre email..." />
                             <input class="form-control flex-fill mr-0 mr-sm-2 mb-3" name="subjectMail" id="subjectMail" type="text" placeholder="Sujet..." />
-                            <textarea class="form-control flex-fill mr-0 mr-sm-2 mb-3" name="textMail" id="textarea" rows="15" type="text" placeholder="Votre message ici..."></textarea>
+                            <textarea class="form-control flex-fill mr-0 mr-sm-2 mb-3" name="textMail" id="textarea" rows="15" type="text" placeholder="Votre message..."></textarea>
                             <button id="btnEmail" class="btn btn-primary mx-auto" type="submit">Envoyer</button>
                         </form>
                     </div>
