--- a/index.html
+++ b/index.html
@@ -74,15 +74,15 @@
                             <div class="slide-track">
                                 <div class="slide"><i class="fab fa-html5"></i></div>
                                 <div class="slide"><i class="fab fa-css3"></i></div>
+                                <div class="slide"><i class="fab fa-js-square"></i></div>
                                 <div class="slide"><i class="fab fa-php"></i></div>
                                 <div class="slide"><i class="fas fa-database"></i></div>
-                                <div class="slide"><i class="fab fa-node-js"></i></div>
                                 <div class="slide"><i class="fab fa-sass"></i></div>
                                 <div class="slide"><i class="fab fa-html5"></i></div>
                                 <div class="slide"><i class="fab fa-css3"></i></div>
+                                <div class="slide"><i class="fab fa-js-square"></i></div>
                                 <div class="slide"><i class="fab fa-php"></i></div>
                                 <div class="slide"><i class="fas fa-database"></i></div>
-                                <div class="slide"><i class="fab fa-node-js"></i></div>
                                 <div class="slide"><i class="fab fa-sass"></i></div>
                             </div>
                         </div>
