--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
                         <h2 class="text-white mb-5">Me contacter !</h2>
                         <form id="formContact" class="form-inline">
                             <input class="form-control flex-fill mr-0 mr-sm-2 mb-3" name="email" id="inputEmail" type="email" placeholder="Votre email..." />
-                            <input class="form-control flex-fill mr-0 mr-sm-2 mb-3" name="subjectMail" id="subjectMail" type="text" placeholder="Sujet..." />
+                            <input class="form-control flex-fill mr-0 mr-sm-2 mb-3" name="subjectMail" id="subjectMail" type="text" placeholder="Votre sujet..." />
                             <textarea class="form-control flex-fill mr-0 mr-sm-2 mb-3" name="textMail" id="textarea" rows="15" type="text" placeholder="Votre message..."></textarea>
                             <button id="btnEmail" class="btn btn-primary mx-auto" type="submit">Envoyer</button>
                         </form>
@@ -216,7 +216,7 @@
             </div>
         </section>
         <!-- Footer-->
-        <footer class="footer bg-black small text-center text-white-50"><div class="container">Copyright © Kilian MINETTO | Portfolio 2020</div></footer>
+        <footer class="footer bg-black small text-center text-white-50"><div class="container">Kilian MINETTO | Portfolio 2021</div></footer>
         <!-- Bootstrap core JS-->
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"></script>
