Changement de la présentation

--- a/index.html
+++ b/index.html
@@ -50,9 +50,8 @@
                     <div id="about-name" class="col-lg-8 offset-lg-2">
                         <h2 class="text-white mb-4">Kilian MINETTO</h2>
                         <p class="text-white-50 text-center">
-                            Jeune développeur web de 22 ans, je suis depuis le 16 septembre 2020 en formation professionnelle
-                            en tant que développeur web avec l'Access Code School à Belfort. L'organisme de formation étant
-                            Onlineformapro.
+                            Jeune développeur web de 22 ans, je suis depuis le 16 septembre 2020 en formation
+                            professionnelle en tant que développeur web àl'Access Code School à Belfort, opéré par Onlineformapro.
                             Passionné par l'univers de l'informatique, je m'intéresse beaucoup aux nouvelles technologies
                             notamment les langages web.
                             J'ai pour objectif de devenir développeur fullstack.
