Adding projects in projects section

--- a/index.html
+++ b/index.html
@@ -97,23 +97,71 @@
                 <!-- Featured Project Row-->
                 <div class="row align-items-center no-gutters mb-4 mb-lg-5">
                     <div class="col-xl-8 col-lg-7">
-                        <!-- TODO Mettre le lien qui redirife vers le site lorsque mis sur le serveur -->
-                        <a href="#" target="_blank">
-                            <img class="img-fluid mb-3 mb-lg-0" src="assets/img/Abyss.PNG" alt="Image du projet Abyss" />
+                        <a href="https://kilianm.promo-45.codeur.online/equality" target="_blank">
+                            <img class="img-fluid mb-3 mb-lg-0" src="assets/img/Equality.PNG" alt="Image du projet Abyss" />
                         </a>
                     </div>
                     <div class="col-xl-4 col-lg-5">
                         <div class="featured-text text-center text-lg-left">
-                            <h4>Abyss</h4>
+                            <h4>Equality</h4>
                             <p class="text-black-50 mb-2">
-                                Projet de groupe mis en oeuvre avec une architecture MVC, ainsi que du PHP orienté objet.
-                                Nous avons utilisé twig pour afficher les différentes vues, et utilisé AltoRouter
-                                pour faire les routes.
+                                Site wordpress, visant à sensibiliser contre l'inégalité des salaires homme/femme, et à
+                                l'accès des femmes à des postes à responsabilités.
                             </p>
                             <p class="mb-2">Liens du projet :</p>
-                            <a href="#" target="_blank" class="mx-2"><i class="fas fa-globe"></i></a>
-                            <a href="https://github.com/nath-pvr/abyss" target="_blank" class="mx-2"><i class="fab fa-github"></i></a>
-
+                            <a href="https://kilianm.promo-45.codeur.online/equaltiy" target="_blank" class="mx-2"><i class="fas fa-globe"></i></a>
+                            <a href="https://github.com/KMinetto/equaltiy" target="_blank" class="mx-2"><i class="fab fa-github"></i></a>
+                        </div>
+                    </div>
+                </div>
+                <!-- Project two Row-->
+                <div class="row justify-content-center no-gutters">
+                    <div class="col-lg-6">
+                        <a href="https://kilianm.promo-45.codeur.online/abyss/" target="_blank">
+                            <img height="350px" class="img-fluid" src="assets/img/Abyss.PNG" alt=""/>
+                        </a>
+                    </div>
+                    <div class="col-lg-6">
+                        <div class="bg-black text-center h-100 project">
+                            <div class="d-flex h-100">
+                                <div class="project-text w-100 py-auto text-center text-lg-right">
+                                    <h4 class="text-white">Abyss</h4>
+                                    <p class="mb-2 text-white-50">
+                                        Projet de groupe mis en oeuvre avec une architecture MVC, ainsi que du PHP orienté objet.
+                                        Nous avons utilisé twig pour afficher les différentes vues, et utilisé AltoRouter
+                                        pour faire les routes.
+                                    </p>
+                                    <p class="mb-2 text-white-50">Liens du projet :</p>
+                                    <a class="mx-2" href="https://kilianm.promo-45.codeur.online/abyss" target="_blank"><i class="fas fa-globe"></i></a>
+                                    <a class="mx-2" href="https://github.com/nath-pvr/Abyss" target="_blank"><i class="fab fa-github"></i></a>
+                                    <hr class="d-none d-lg-block mb-0 mr-0" />
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <!-- Project two Row-->
+                <div class="row justify-content-center no-gutters">
+                    <div class="col-lg-6">
+                        <a href="https://kilianm.promo-45.codeur.online/NetflixLike/" target="_blank">
+                            <img height="320px" class="img-fluid" src="assets/img/NetflixLike.PNG" alt=""/>
+                        </a>
+                    </div>
+                    <div class="col-lg-6 order-lg-first">
+                        <div class="bg-black text-center h-100 project">
+                            <div class="d-flex h-100">
+                                <div class="project-text w-100 py-auto text-center text-lg-right">
+                                    <h4 class="text-white">Projet CRUD <small>(Work in progress)</small></h4>
+                                    <p class="mb-2 text-white-50">
+                                        Projet réalisé en PHP et MySQL, il permet à un utilisateur de pouvoir ajouter,
+                                        supprimer ou modifier un film.
+                                    </p>
+                                    <p class="mb-2 text-white-50">Liens du projet :</p>
+                                    <a class="mx-2" href="https://kilianm.promo-45.codeur.online/NetflixLike" target="_blank"><i class="fas fa-globe"></i></a>
+                                    <a class="mx-2" href="https://github.com/KMinetto/NetflixLike" target="_blank"><i class="fab fa-github"></i></a>
+                                    <hr class="d-none d-lg-block mb-0 mr-0" />
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -124,7 +172,7 @@
                             <img height="320px" class="img-fluid" src="assets/img/Design.PNG" alt=""/>
                         </a>
                     </div>
-                    <div class="col-lg-6 order-lg-first">
+                    <div class="col-lg-6">
                         <div class="bg-black text-center h-100 project">
                             <div class="d-flex h-100">
                                 <div class="project-text w-100 py-auto text-center text-lg-right">
@@ -143,30 +191,6 @@
                     </div>
                 </div>
                 <!-- Project two Row-->
-                <div class="row justify-content-center no-gutters mb-5 mb-lg-0">
-                    <div class="col-lg-6">
-                        <a href="https://kilianm.promo-45.codeur.online/Mark/" target="_blank">
-                            <img height="289px" class="img-fluid" src="assets/img/Mark.PNG" alt="" />
-                        </a>
-                    </div>
-                    <div class="col-lg-6">
-                        <div class="bg-black text-center h-100 project">
-                            <div class="d-flex h-100">
-                                <div class="project-text w-100 my-auto text-center text-lg-left">
-                                    <h4 class="text-white">Mark</h4>
-                                    <p class="mb-2 text-white-50">
-                                        Premier projet d'intégration. C'est un projet où j'ai pu découvrir Bootstrap
-                                    </p>
-                                    <p class="mb-2 text-white-50">Liens du projet :</p>
-                                    <a class="mx-2" href="https://kilianm.promo-45.codeur.online/Mark/" target="_blank"><i class="fas fa-globe"></i></a>
-                                    <a class="mx-2" href="https://github.com/KMinetto/Mark" target="_blank"><i class="fab fa-github"></i></a>
-                                    <hr class="d-none d-lg-block mb-0 ml-0" />
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <!-- Project three Row-->
                 <div class="row justify-content-center no-gutters">
                     <div class="col-lg-6">
                         <a href="https://kilianm.promo-45.codeur.online/Mathematic/" target="_blank">
@@ -186,6 +210,30 @@
                                     <a class="mx-2" href="https://kilianm.promo-45.codeur.online/Mathematic" target="_blank"><i class="fas fa-globe"></i></a>
                                     <a class="mx-2" href="https://github.com/KMinetto/Mathematic" target="_blank"><i class="fab fa-github"></i></a>
                                     <hr class="d-none d-lg-block mb-0 mr-0" />
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <!-- Project three Row-->
+                <div class="row justify-content-center no-gutters mb-5 mb-lg-0">
+                    <div class="col-lg-6">
+                        <a href="https://kilianm.promo-45.codeur.online/Mark/" target="_blank">
+                            <img height="289px" class="img-fluid" src="assets/img/Mark.PNG" alt="" />
+                        </a>
+                    </div>
+                    <div class="col-lg-6">
+                        <div class="bg-black text-center h-100 project">
+                            <div class="d-flex h-100">
+                                <div class="project-text w-100 my-auto text-center text-lg-left">
+                                    <h4 class="text-white">Mark</h4>
+                                    <p class="mb-2 text-white-50">
+                                        Premier projet d'intégration. C'est un projet où j'ai pu découvrir Bootstrap
+                                    </p>
+                                    <p class="mb-2 text-white-50">Liens du projet :</p>
+                                    <a class="mx-2" href="https://kilianm.promo-45.codeur.online/Mark/" target="_blank"><i class="fas fa-globe"></i></a>
+                                    <a class="mx-2" href="https://github.com/KMinetto/Mark" target="_blank"><i class="fab fa-github"></i></a>
+                                    <hr class="d-none d-lg-block mb-0 ml-0" />
                                 </div>
                             </div>
                         </div>
