Change redirect for equality project

--- a/index.html
+++ b/index.html
@@ -109,8 +109,8 @@
                                 l'accès des femmes à des postes à responsabilités.
                             </p>
                             <p class="mb-2">Liens du projet :</p>
-                            <a href="https://kilianm.promo-45.codeur.online/equaltiy" target="_blank" class="mx-2"><i class="fas fa-globe"></i></a>
-                            <a href="https://github.com/KMinetto/equaltiy" target="_blank" class="mx-2"><i class="fab fa-github"></i></a>
+                            <a href="https://kilianm.promo-45.codeur.online/equality" target="_blank" class="mx-2"><i class="fas fa-globe"></i></a>
+                            <a href="https://github.com/KMinetto/equality" target="_blank" class="mx-2"><i class="fab fa-github"></i></a>
                         </div>
                     </div>
                 </div>
@@ -179,7 +179,7 @@
                                     <h4 class="text-white">Design&Develop</h4>
                                     <p class="mb-2 text-white-50">
                                         Projet d'intégration réalisé avec Bootstrap, c'est un site d'un organisme de développement
-                                        informatique qui montre les projets rélisés, propose des services etc...
+                                        informatique qui montre les projets réalisés, propose des services etc...
                                     </p>
                                     <p class="mb-2 text-white-50">Liens du projet :</p>
                                     <a class="mx-2" href="https://kilianm.promo-45.codeur.online/Design&Develop" target="_blank"><i class="fas fa-globe"></i></a>
