Add margin-bottom under each projects

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
     <head>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
@@ -115,7 +115,7 @@
                     </div>
                 </div>
                 <!-- Project two Row-->
-                <div class="row justify-content-center no-gutters">
+                <div class="row justify-content-center no-gutters mb-3">
                     <div class="col-lg-6">
                         <a href="https://kilianm.promo-45.codeur.online/abyss/" target="_blank">
                             <img height="350px" class="img-fluid" src="assets/img/Abyss.PNG" alt=""/>
@@ -141,7 +141,7 @@
                     </div>
                 </div>
                 <!-- Project two Row-->
-                <div class="row justify-content-center no-gutters">
+                <div class="row justify-content-center no-gutters mb-3">
                     <div class="col-lg-6">
                         <a href="https://kilianm.promo-45.codeur.online/NetflixLike/" target="_blank">
                             <img height="320px" class="img-fluid" src="assets/img/NetflixLike.PNG" alt=""/>
@@ -166,7 +166,7 @@
                     </div>
                 </div>
                 <!-- Project one Row-->
-                <div class="row justify-content-center no-gutters">
+                <div class="row justify-content-center no-gutters mb-3">
                     <div class="col-lg-6">
                         <a href="https://kilianm.promo-45.codeur.online/Design&Develop/" target="_blank">
                             <img height="320px" class="img-fluid" src="assets/img/Design.PNG" alt=""/>
@@ -191,7 +191,7 @@
                     </div>
                 </div>
                 <!-- Project two Row-->
-                <div class="row justify-content-center no-gutters">
+                <div class="row justify-content-center no-gutters mb-3">
                     <div class="col-lg-6">
                         <a href="https://kilianm.promo-45.codeur.online/Mathematic/" target="_blank">
                             <img height="320px" class="img-fluid" src="assets/img/Multiplication.PNG" alt=""/>
