Add slide before contact section

--- a/index.html
+++ b/index.html
@@ -241,6 +241,31 @@
                 </div>
             </div>
         </section>
+        <!-- Slider -->
+        <section>
+            <div class="container">
+                <div class="row">
+                    <div class="col-12 col-sm-12 col-md-12">
+                        <div class="ind-slider">
+                            <div class="slide-track">
+                                <div class="slide"><i class="fab fa-symfony"></i></div>
+                                <div class="slide"><i class="fab fa-vuejs"></i></div>
+                                <div class="slide"><i class="fab fa-wordpress"></i></div>
+                                <div class="slide"><i class="fab fa-bootstrap"></i></div>
+                                <div class="slide"><i class="fab fa-git"></i></div>
+                                <div class="slide"><i class="fab fa-github-alt"></i></div>
+                                <div class="slide"><i class="fab fa-symfony"></i></div>
+                                <div class="slide"><i class="fab fa-vuejs"></i></div>
+                                <div class="slide"><i class="fab fa-wordpress"></i></div>
+                                <div class="slide"><i class="fab fa-bootstrap"></i></div>
+                                <div class="slide"><i class="fab fa-git"></i></div>
+                                <div class="slide"><i class="fab fa-github-alt"></i></div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
         <!-- Contact -->
         <section class="signup-section" id="signup">
             <div class="container">
